k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vuln-app-service
spec:
  type: ClusterIP
  selector:
    app: vuln-app
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
